# currentTimeMCP

./: Dockerfile  Dockerfile.web  README.md  app.py  health_check_api.py  mcp_server.py  nginx.conf  requirements.txt  simple_streamable_http_mcp_server.py  start.sh
healthcheck/: server.py
mcp_simple_timeserver/: server.py
old/: pyproject.toml
proxy/: server.py
