[project]
name = "datetime-mcp-server"
version = "0.1.0"
description = "MCP Server to get current date and time for São Paulo (UTC-3)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "mcp>=1.0.0",
]

[project.scripts]
mcp-server = "simple_streamable_http_mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]